Made the theme more complete

--- a/layout/home.pug
+++ b/layout/home.pug
@@ -1,22 +1,25 @@
 .jumbotron
   .container
-    h1.display-4 Hej
-    p 
-    p
-      a.btn.btn-primary.btn-lg(href='#') Gör ngt &raquo;
+    h1.display-5 Sofie Karlsson
+    p Jag gör det ena och det andra.
+    a.btn.btn-primary.btn-lg(href='/om') Läs mer om mig &raquo;
 
 
 .container
   .row
     .col-md-4
-      h2 Hästar
-      p Hästar 
+      h2 Häst
+      p Hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar 
+      p
+        a.btn.btn-secondary(href='/hast') Läs mer &raquo;
     .col-md-4
-      h2 Maskiner
-      p Maskiner blahbla
+      h2 Maskin
+      p Maskiner maskiner maskiner maskiner maskiner maskiner maskiner maskiner maskiner maskiner 
+      p
+        a.btn.btn-secondary(href='/maskin') Läs mer &raquo;
     .col-md-4
       h2 Lantbruk 
-      p Lantbruk blahbla
+      p Lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk 
+      p
+        a.btn.btn-secondary(href='/lantbruk') Läs mer &raquo;
 
-.container
-  div !{page.content}
