--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -1,5 +1,14 @@
 @import '../bower_components/bootstrap/scss/bootstrap';
 
+html {
+  min-height: 100%;
+  position: relative;
+}
+
+body {
+  margin-bottom: 60px;
+}
+
 .navbar-brand {
   float: none;
   display: block;
@@ -38,6 +47,24 @@
   table {
     @extend .table;
     @extend .table-striped;
+  }
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+
+  p {
+    margin: 0;
+  }
+
+  .spacer {
+    display: inline-block;
+    width: 1rem;
   }
 }
 
