Defaulting to "privatperson", header update

--- a/layout/home.pug
+++ b/layout/home.pug
@@ -2,7 +2,7 @@
   .container
     h1.display-5 Sofie Karlsson
     p Jag gör det ena och det andra.
-    a.btn.btn-primary.btn-lg(href='/om') Läs mer om mig &raquo;
+    a.btn.btn-primary.btn-lg(href='/kontakt') Läs mer om mig &raquo;
 
 
 .container
