--- a/layout/home.pug
+++ b/layout/home.pug
@@ -9,17 +9,19 @@
   .row
     .col-md-4
       h2 Häst
-      p Hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar hästar 
+      h3 Hästklippning
+      h3 In/utsläpp samt utfodring
       p
         a.btn.btn-secondary(href='/hast') Läs mer &raquo;
     .col-md-4
       h2 Maskin
-      p Maskiner maskiner maskiner maskiner maskiner maskiner maskiner maskiner maskiner maskiner 
+      h3 Traktorkörning vid vårbruk & skörd
       p
         a.btn.btn-secondary(href='/maskin') Läs mer &raquo;
     .col-md-4
-      h2 Lantbruk 
-      p Lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk lantbruk 
+      h2 Kossor 
+      h3 Koklippning
+      h3 Djurskötare
       p
         a.btn.btn-secondary(href='/lantbruk') Läs mer &raquo;
 
