--- a/layout/layout.pug
+++ b/layout/layout.pug
@@ -33,7 +33,7 @@ html
       .container.text-muted
         | &copy; Sofie Karlsson
         .spacer
-        a(href='#')
+        a(href='https://www.facebook.com/SK-Djur-Traktor-541429319399851/' target='_blank')
           i.icon-facebook
           | SK Djur & Traktor
 
